fixed tooltip being covered by tableheader

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -27,7 +27,7 @@
   text-align: center;
   padding: 8px;
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   bottom: 125%;
   left: 50%;
   transform: translateX(-50%);
